# ML

./: .4.ann.py.swp  .gitignore  0.understand_matrix_slice.py  1.hand-written.py  10.Q_network_RL.py  11.keras_Q_network.py  2.play-regression.py  3.multiple_linear_regression.py  4.5.keras_multiple_variable_regression_example.py  4.ann.py  8.Q_table_reinforcement_learning.py  8.reinforcement_learning.py  9.Q_table_RL_2.py  README.md  test.py
12.reinforcement_learning_with_mario_bros/: .gitignore  README.md  environment.yml  main.py  model.py  nn_model.HDF5  pyproject.toml  requirements.sh  test.py  train.py
12.reinforcement_learning_with_mario_bros/2022/tensorflow/: environment.yml  main.py  model.py  pyproject.toml  utils.py
12.reinforcement_learning_with_mario_bros/2023/: .gitignore  README.md  get_good_data_from_nothing.py  main.py  main.py.backup  model.py  requirements.txt  yingshaoxo_method.py
12.reinforcement_learning_with_mario_bros/2023/hard_coding/: .gitignore  1.0.get_images.py  1.1.use_image_to_perform_action.py  1.2.use_mobilenet_feature_to_perform_action.py  1.3.cpu_quick_mode.py  1.4.auto_trainer.py  2.0.clustering_images.py  2.1.clustering_images.py  README.md  requirements.txt
12.reinforcement_learning_with_mario_bros/2023/keras/: .gitignore  README.md  example.py  main.backup.py  main.backup2.py  main.backup_1.5.py  main.backup_1.py  main.backup_2.py  main.backup_3.py  main.py  requirements.txt  requirements_for_stupid-mac-m1.txt  requirements_for_stupid_windows.txt  (+1 more)
12.reinforcement_learning_with_mario_bros/src/: env.py  model.py  process.py
(+155 files in other folders)
