[tool.poetry]
name = "12.reinforcement_learning_with_mario_bros"
version = "0.1.0"
description = ""
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym-super-mario-bros = "^7.3.2"
opencv-python = "^4.5.5"
transformers = "^4.16.2"
Pillow = "6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
